--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,14 @@
+root=true
+
 [*]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
+
+[Makefile]
+indent_size = 4
+indent_style = tab
 
 [*.md]
 insert_final_newline = true
